--- a/lsb-web/pom.xml
+++ b/lsb-web/pom.xml
@@ -38,6 +38,10 @@
 			<artifactId>nio-multipart-parser</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
