added devtools and custom health indicator

--- a/lsb-web/src/main/resources/application.properties
+++ b/lsb-web/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
+#endpoints.default.web.enabled=true
+
+#spring.devtools.remote.secret=learning-spring-boot
