--- a/lsb-web/src/main/resources/application.properties
+++ b/lsb-web/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-#management.endpoints.web.exposure.include=*
+management.info.git.mode=full
+#management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+
 #endpoints.default.web.enabled=true
 
 #spring.devtools.remote.secret=learning-spring-boot
